# wololo

./: Cargo.toml  README.md
.github/workflows/: docker-publish.yml  rust.yml
ci/: Containerfile
src/: db.rs  device.rs  mac.rs  main.rs  slack_bot.rs  wol.rs
src/cli/: mod.rs
src/repository/: file.rs  inmemory.rs  mod.rs
src/service/: mod.rs  slack.rs
src/tests/: mod.rs
