[package]
name = "wololo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["cargo"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
slack-morphism = { version = "1.4", features = ["hyper", "axum"] }
tempfile = "3.3"
tokio = { version = "1", features = ["full"] }
toml = "0.5.9"
wakey = "0.2.2"
