[package]
name = "wololo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
slack-morphism = { version = "1.15.1", features = ["hyper"] }
tokio = { version = "1.33.0", features = ["full"] }
wol-rs = "1.0.1"
